Issue #18303: Add regression test to ensure all xdoc example files are referenced in Example tests